# pairup

./: .gitignore  README.md  pyproject.toml
pairup/: __init__.py  __main__.py  cli.py  pairup.py
tests/: conftest.py  test_cli.py  test_pairup.py
