[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Ogaday Willers Moore <w.ogaday@gmail.com>"]
description = ""
name = "pairup"
packages = [{"include" = "pairup"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ipython = "^8.29.0"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
toml-sort = "^0.23.1"

[tool.poetry.scripts]
pairup = 'pairup.__main__:cli'

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--cov",
  "pairup",
  "--cov-report",
  "html"
]
testpaths = [
  "pairup",
  "tests"
]

[tool.tomlsort]
ignore_case = true
sort_table_keys = true

[tool.tomlsort.overrides."tool.poetry.dependencies"]
first = ["python"]
